--- a/postman/reports/html/index.html
+++ b/postman/reports/html/index.html
@@ -15,76 +15,17 @@
     <table style="width: 60%;" class="table table-bordered mb-5">
         <tbody>
             <tr><th>Collection</th><th>Result</th><th>Duration (seconds)</th></tr>
-<tr><td><a href="./Add-Remove_Contentlet_from_a_Page.postman_collection.html">Add-Remove Contentlet from a Page.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>114.839</td></tr><tr><td><a href="./ApiToken_Resource.postman_collection.html">ApiToken Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>210.311</td></tr><tr><td><a href="./Apps.postman_collection.html">Apps.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>64.147</td></tr><tr><td><a href="./BringBack.postman_collection.html">BringBack.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>103.243</td></tr><tr><td><a href="./Browser_Resource.postman_collection.html">Browser Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>35.718</td></tr><tr><td><a href="./Bundle_Resource.postman_collection.html">Bundle Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>117.033</td></tr><tr><td><a href="./CacheResource.postman_collection.html">CacheResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>27.765</td></tr><tr><td><a href="./Category.postman_collection.html">Category.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>245.508</td></tr><tr><td><a href="./ConfigurationResource.postman_collection.html">ConfigurationResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>17.234</td></tr><tr><td><a href="./ContainerResource.postman_collection.html">ContainerResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>25.951</td></tr><tr><td><a href="./Containers.postman_collection.html">Containers.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>446.112</td></tr><tr><td><a href="./ContentResourceV1.postman_collection.html">ContentResourceV1.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>216.085</td></tr><tr><td><a href="./ContentTypeResourceTests.html">ContentTypeResourceTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>249.406</td></tr><tr><td><a href="./Content_Resource.postman_collection.html">Content Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>292.908</td></tr><tr><td><a href="./CreateAdvanceTemplateOnSpecificHost.postman_collection.html">CreateAdvanceTemplateOnSpecificHost.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>20.355</td></tr><tr><td><a href="./DotAsset-MultiPart-TempFile.postman_collection.html">DotAsset-MultiPart-TempFile.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>15.015</td></tr><tr><td><a href="./DotAsset.postman_collection.html">DotAsset.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>43.2</td></tr><tr><td><a href="./DotFavoritePage.postman_collection.html">DotFavoritePage.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>51.063</td></tr><tr><td><a href="./ESIndexResourceTests.html">ESIndexResourceTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>10.996</td></tr><tr><td><a href="./Experiment_Result.postman_collection.html">Experiment Result.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>20.301</td></tr><tr><td><a href="./Experiments_Resource.postman_collection.html">Experiments Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>592.675</td></tr><tr><td><a href="./FolderResource.postman_collection.html">FolderResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>109.516</td></tr><tr><td><a href="./ForgotPasswordResource.postman_collection.html">ForgotPasswordResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>1.174</td></tr><tr><td><a href="./Form_Resource.postman_collection.html">Form Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>34.917</td></tr><tr><td><a href="./GraphQLTests.html">GraphQLTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>2101.933</td></tr><tr><td><a href="./Image.postman_collection.html">Image.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>51.076</td></tr><tr><td><a href="./Integrity_Checker_From_Sender.postman_collection.html">Integrity Checker From Sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>107.737</td></tr><tr><td><a href="./Integrity_Checker_JWT_Token_Test.postman_collection.html">Integrity Checker JWT Token Test.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>88.962</td></tr><tr><td><a href="./LanguageResourceTests.html">LanguageResourceTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>143.808</td></tr><tr><td><a href="./Logger_Resource.postman_collection.html">Logger Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>23.244</td></tr><tr><td><a href="./Maintenance_Resource.html">Maintenance Resource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>1.136</td></tr><tr><td><a href="./Maintenance_Resource_-_Donwload_Assets.html">Maintenance Resource - Donwload Assets.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>9.077</td></tr><tr><td><a href="./Maintenance_Resource_-_Donwload_Log_File.html">Maintenance Resource - Donwload Log File.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>12.514</td></tr><tr><td><a href="./Maintenance_Resource_-_Download_DB_Dump.html">Maintenance Resource - Download DB Dump.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>11.655</td></tr><tr><td><a href="./Maintenance_Resource_-_Download_Starter.html">Maintenance Resource - Download Starter.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>13.624</td></tr><tr><td><a href="./Manifest_Download_End_Point.postman_collection.html">Manifest Download End Point.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>43.574</td></tr><tr><td><a href="./NavResourceTests.html">NavResourceTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>148.002</td></tr><tr><td><a href="./Osgi.postman_collection.html">Osgi.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>8.072</td></tr><tr><td><a href="./Page_Version_with_diferrent_Templates.postman_collection.html">Page Version with diferrent Templates.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>100.739</td></tr><tr><td><a href="./PagesResourceTests.html">PagesResourceTests.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
-      <td>586.164</td></tr><tr><td><a href="./Permission_Resource.postman_collection.html">Permission Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>71.421</td></tr><tr><td><a href="./PortletResource.html">PortletResource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>60.811</td></tr><tr><td><a href="./Promote_Variant.postman_collection.html">Promote Variant.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>5.198</td></tr><tr><td><a href="./PublishQueueResource.html">PublishQueueResource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>11.968</td></tr><tr><td><a href="./PushPublishFilterResource.postman_collection.html">PushPublishFilterResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>30.052</td></tr><tr><td><a href="./Push_Publish_JWT_Token_Test.postman_collection.html">Push Publish JWT Token Test.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
-      <td>22.842</td></tr><tr><td><a href="./Push_Publish_from_sender.postman_collection.html">Push Publish from sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>138.253</td></tr><tr><td><a href="./Reltionship_cache_in_push_publish.postman_collection.html">Reltionship_cache_in_push_publish.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>28.072</td></tr><tr><td><a href="./ResourceLink.postman_collection.html">ResourceLink.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>23.843</td></tr><tr><td><a href="./RoleResource.postman_collection.html">RoleResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>29.279</td></tr><tr><td><a href="./Save_Layout_With_Relative_Path.postman_collection.html">Save Layout With Relative Path.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>66.673</td></tr><tr><td><a href="./Scripting_Resource.postman_collection.html">Scripting Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>14.75</td></tr><tr><td><a href="./Site_Resource.postman_collection.html">Site Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>251.352</td></tr><tr><td><a href="./System.postman_collection.html">System.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>14.098</td></tr><tr><td><a href="./TagsResource.html">TagsResource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>95.979</td></tr><tr><td><a href="./TempAPI.postman_collection.html">TempAPI.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>5.436</td></tr><tr><td><a href="./Template_Resource.postman_collection.html">Template Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>681.114</td></tr><tr><td><a href="./ThemeResource.postman_collection.html">ThemeResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>17.11</td></tr><tr><td><a href="./ToolGroupResource.postman_collection.html">ToolGroupResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>65.394</td></tr><tr><td><a href="./UserResource.postman_collection.html">UserResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>20.362</td></tr><tr><td><a href="./User_Include_Into_Experiment.postman_collection.html">User Include Into Experiment.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>142.499</td></tr><tr><td><a href="./VanityURL.postman_collection.html">VanityURL.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>37.893</td></tr><tr><td><a href="./Velocity.postman_collection.html">Velocity.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>24.014</td></tr><tr><td><a href="./VelocityMacro.postman_collection.html">VelocityMacro.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>38.614</td></tr><tr><td><a href="./VelocitySecrets.postman_collection.html">VelocitySecrets.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>11.302</td></tr><tr><td><a href="./VersionableResource.postman_collection.html">VersionableResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>147.52</td></tr><tr><td><a href="./Visitor.postman_collection.html">Visitor.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>33.652</td></tr><tr><td><a href="./WebAssets.postman_collection.html">WebAssets.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>102.635</td></tr><tr><td><a href="./Workflow_Resource_Tests.html">Workflow Resource Tests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>1210.245</td></tr>        </tbody>
+<tr><td><a href="./ContainerResource.postman_collection.html">ContainerResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>33.112</td></tr><tr><td><a href="./Containers.postman_collection.html">Containers.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>447.391</td></tr><tr><td><a href="./GraphQLTests.html">GraphQLTests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>2178.004</td></tr><tr><td><a href="./PagesResourceTests.html">PagesResourceTests.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
+      <td>598.778</td></tr><tr><td><a href="./PublishQueueResource.html">PublishQueueResource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>18.29</td></tr><tr><td><a href="./PushPublishFilterResource.postman_collection.html">PushPublishFilterResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>30.29</td></tr><tr><td><a href="./Push_Publish_JWT_Token_Test.postman_collection.html">Push Publish JWT Token Test.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
+      <td>23.445</td></tr><tr><td><a href="./Push_Publish_from_sender.postman_collection.html">Push Publish from sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
+      <td>139.666</td></tr><tr><td><a href="./Template_Resource.postman_collection.html">Template Resource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>665.521</td></tr><tr><td><a href="./Workflow_Resource_Tests.html">Workflow Resource Tests.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>1190.664</td></tr>        </tbody>
     </table>
 </div>
 </body>
