--- a/postman/reports/html/index.html
+++ b/postman/reports/html/index.html
@@ -15,3 +15,8 @@
     <table style="width: 60%;" class="table table-bordered mb-5">
         <tbody>
             <tr><th>Collection</th><th>Result</th><th>Duration (seconds)</th></tr>
+        </tbody>
+    </table>
+</div>
+</body>
+</html>
