--- a/postman/reports/html/container.html
+++ b/postman/reports/html/container.html
@@ -16,10 +16,10 @@
         <tbody>
             <tr><th>Collection</th><th>Result</th><th>Duration (seconds)</th></tr>
 
-<tr><td><a href="./ContainerResource.postman_collection.html">ContainerResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>29.793</td></tr>
+<tr><td><a href="./ContainerResource.postman_collection.html">ContainerResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
+      <td>31.715</td></tr>
 <tr><td><a href="./Containers.postman_collection.html">Containers.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>446.772</td></tr>
+      <td>450.209</td></tr>
         </tbody>
     </table>
 </div>
