--- a/postman/reports/html/pp.html
+++ b/postman/reports/html/pp.html
@@ -17,13 +17,13 @@
             <tr><th>Collection</th><th>Result</th><th>Duration (seconds)</th></tr>
 
 <tr><td><a href="./PublishQueueResource.html">PublishQueueResource.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>9.229</td></tr>
-<tr><td><a href="./Push_Publish_from_sender.postman_collection.html">Push Publish from sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
-      <td>138.28</td></tr>
+      <td>11.642</td></tr>
+<tr><td><a href="./Push_Publish_from_sender.postman_collection.html">Push Publish from sender.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
+      <td>171.608</td></tr>
 <tr><td><a href="./Push_Publish_JWT_Token_Test.postman_collection.html">Push Publish JWT Token Test.postman_collection.json</a></td><td style="color: #ffffff; background-color: #dc3545; font-weight: bold;">FAILED</td>
-      <td>22.859</td></tr>
+      <td>23.017</td></tr>
 <tr><td><a href="./PushPublishFilterResource.postman_collection.html">PushPublishFilterResource.postman_collection.json</a></td><td style="color: #ffffff; background-color: #28a745; font-weight: bold;">PASSED</td>
-      <td>29.948</td></tr>
+      <td>29.852</td></tr>
         </tbody>
     </table>
 </div>
